--- a/myproject/Website.html
+++ b/myproject/Website.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- 遷入 CSS -->
+    <link rel="stylesheet" href="./style.css">
     <title>靜態網頁</title>
 </head>
 <body>
+    <!-- 換圖輪播功能一 -->
     
 </body>
 </html>
