--- a/myproject/index.html
+++ b/myproject/index.html
@@ -8,8 +8,8 @@
 <body>
     <ul class="a">
         <li><a href="./Website.html">Website</a></li>
-        <li><a href="mailto:m.bluth@example.com">React</a></li>
-        <li><a href="tel:+123456789">SASS</a></li>
+        <!-- <li><a href="mailto:m.bluth@example.com">React</a></li> -->
+        <!-- <li><a href="tel:+123456789">SASS</a></li> -->
       </ul>
 </body>
 </html>
