--- a/myproject/Website.html
+++ b/myproject/Website.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Code Pen 這裡可以再連結sass的套件檔案  -->
-    <link rel="stylesheet" href="./css/carousel.css">
+    <link rel="stylesheet" href="../myproject/css/carousel.css">
 
     <!-- 自訂的CSS權重要最大，一定要放在最下面 -->
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="../myproject/css/style.css">
     <title>靜態網頁</title>
 </head>
 
