--- a/myproject/index.html
+++ b/myproject/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Choco 程式庫</title>
+    <!-- 自訂的CSS權重要最大，一定要放在最下面 -->
+    <link rel="stylesheet" href="../myproject/css/style.css">
     <!-- Code Pen 檔案  -->
 </head>
 
