--- a/myproject/index.html
+++ b/myproject/index.html
@@ -11,11 +11,26 @@
 </head>
 
 <body>
-    <ul class="a">
-        <li><a href="./Website.html">Website</a></li>
-        <!-- <li><a href="mailto:m.bluth@example.com">React</a></li> -->
-        <!-- <li><a href="tel:+123456789">SASS</a></li> -->
-    </ul>
+    <header id="topbar">
+        <!-- logo區 -->
+        <!-- 主要區塊的一個小部分用class -->
+        <h1 class="logo">
+            <a href="index.html">
+                <!-- svg預設會自動寬度100% -->
+                <img src="./images/flowershop/logo_b.svg" alt="LOGO" title="練習LOGO"> <!-- itle的目的是給語音導覽唸的 -->
+            </a>
+        </h1>
+        <!-- 導覽列 -->
+        <nav class="navigation">
+            <!-- 主選單 -->
+            <ul class="menu">
+                <li><a href="./Website.html">Website</a></li>
+                <li><a href="#">React 施工中</a></li>
+                <li><a href="#">Sass 施工中</a></li>
+                </menu>
+        </nav>
+    </header>
+
 
 </body>
 
