--- a/myproject/index.html
+++ b/myproject/index.html
@@ -15,7 +15,7 @@
         <!-- logo區 -->
         <!-- 主要區塊的一個小部分用class -->
         <h1 class="logo">
-            <a href="index.html">
+            <a href="./index.html">
                 <!-- svg預設會自動寬度100% -->
                 <img src="./images/flowershop/logo_b.svg" alt="LOGO" title="練習LOGO"> <!-- itle的目的是給語音導覽唸的 -->
             </a>
@@ -30,6 +30,8 @@
                 </menu>
         </nav>
     </header>
+
+    
 
 
 </body>
