--- a/myproject/Website.html
+++ b/myproject/Website.html
@@ -15,6 +15,33 @@
 
 <body>
     <main>
+        <!-- 漢堡按鈕 -->
+        <div class="navbar">
+            <button class="hamburger">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
+            <nav class="navigation">
+                <!-- <ul class="icon">
+                    <li><a href="#"><img src="https://demo.jumpdesign.tw/img/icon-fb.svg"
+                                alt="搜尋按鈕"></a></li>
+                    <li><a href="#"><img src="https://demo.jumpdesign.tw/img/icon-ig.svg"
+                                alt="會員管理按鈕"></a></li>
+                    <li><a href="#"><img src="https://demo.jumpdesign.tw/img/icon-line.svg"
+                                alt="購物車按鈕"></a>
+                    </li>
+                </ul> -->
+
+                <ul class="menu">
+                    <li><a href="#">HOME</a></li>
+                    <li><a href="#">NEWS</a></li>
+                    <li><a href="#">SERVICE</a></li>
+                    <li><a href="#">ABOUT</a></li>
+                    <li><a href="#">CONTACT</a></li>
+                </ul>
+            </nav>
+        </div>
         <!-- banner 區換圖輪播功能一 -->
         <section id="banner">
             <div class="content-slider">
@@ -92,6 +119,9 @@
 
     <!-- 套件:換圖輪播js -->
     <script src="./js/carousel.js"></script>
+
+    <!-- 套件:漢堡按鈕 -->
+    <script src="./js/Hamburger.js"></script>
 
 </body>
 
