--- a/myproject/index.html
+++ b/myproject/index.html
@@ -25,7 +25,7 @@
             <!-- 主選單 -->
             <ul class="menu">
                 <li><a href="./Website.html">Website</a></li>
-                <li><a href="#">React 施工中</a></li>
+                <li><a href="./jQuery/jQuery.html">jQuery</a></li>
                 <li><a href="#">Sass 施工中</a></li>
                 </menu>
         </nav>
