--- a/myproject/index.html
+++ b/myproject/index.html
@@ -17,7 +17,7 @@
         <h1 class="logo">
             <a href="./index.html">
                 <!-- svg預設會自動寬度100% -->
-                <img src="./images/flowershop/logo_b.svg" alt="LOGO" title="練習LOGO"> <!-- itle的目的是給語音導覽唸的 -->
+                <img src="./images/flowershop/logo_b.svg" alt="LOGO" title="練習LOGO"> <!-- title的目的是給語音導覽唸的 -->
             </a>
         </h1>
         <!-- 導覽列 -->
