--- a/myproject/index.html
+++ b/myproject/index.html
@@ -21,13 +21,13 @@
             </a>
         </h1>
         <!-- 導覽列 -->
-        <nav class="navigation">
+        <nav class="navigation-home">
             <!-- 主選單 -->
             <ul class="menu">
-                <li><a href="./Website.html">Website</a></li>
+                <li><a href="./pages/Website.html">Website</a></li>
                 <li><a href="./jQuery/jQuery.html">jQuery</a></li>
-                <li><a href="#">Sass 施工中</a></li>
-                </menu>
+                <li><a href="./jQuery/jQuery2.html">jQuery 2</a></li>
+            </ul>
         </nav>
     </header>
 
