--- a/myproject/pages/Website.html
+++ b/myproject/pages/Website.html
@@ -432,8 +432,8 @@
     <!-- jQuery原生碼 CDN 一定要放在最上面，讓瀏覽器先讀jQuery,才抓得到定義的函式庫 -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
     <!-- 套件：換圖輪播js -->
-    <script src="./js/carousel.js"></script>
-    <script src="./js/script.js"></script>
+    <script src="../js/carousel.js"></script>
+    <script src="../js/script.js"></script>
 </body>
 
 </html>
