--- a/Bootstrap/Zara Web/index.html
+++ b/Bootstrap/Zara Web/index.html
@@ -74,6 +74,7 @@
   <!-- 主要內容區 -->
   <main>
     <section id="news">
+      <!-- 區塊標題 -->
       <header class="heading">
         <h3>最新消息</h3>
       </header>
@@ -99,6 +100,36 @@
           <a href="#" class="mask mask-3">
             <h3>NEW TITLE</h3>
             <img src="./images/new3.jpg" alt="">
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <!-- 熱門商品區 -->
+    <section id="hot">
+      <header class="heading">
+        <h3>最新消息</h3>
+      </header>
+      <!-- 列表區 -->
+      <!-- div.list>div.item*3>a[href="#"]+h3[TITLE NAME]+img[src="./images/hot$.jpg"] -->
+
+      <div class="list">
+        <div class="item">
+          <a href="#">
+            <h3 TITLE="" NAME=""></h3>
+            <img src="./images/hot1.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <h3 TITLE="" NAME=""></h3>
+            <img src="./images/hot2.jpg" alt="">
+          </a>
+        </div>
+        <div class="item">
+          <a href="#">
+            <h3 TITLE="" NAME=""></h3>
+            <img src="./images/hot3.jpg" alt="">
           </a>
         </div>
       </div>
