--- a/Bootstrap/Zara Web/index.html
+++ b/Bootstrap/Zara Web/index.html
@@ -114,19 +114,19 @@
       <!-- div.list>div.item*3>a[href="#"]+h3[TITLE NAME]+img[src="./images/hot$.jpg"] -->
 
       <div class="list">
-        <div class="item">
+        <div class="item" class="clip">
           <a href="#">
             <h3 TITLE="" NAME=""></h3>
             <img src="./images/hot1.jpg" alt="">
           </a>
         </div>
-        <div class="item">
+        <div class="item" class="clip">
           <a href="#">
             <h3 TITLE="" NAME=""></h3>
             <img src="./images/hot2.jpg" alt="">
           </a>
         </div>
-        <div class="item">
+        <div class="item" class="clip">
           <a href="#">
             <h3 TITLE="" NAME=""></h3>
             <img src="./images/hot3.jpg" alt="">
