--- a/myproject/pages/Post-an-article.html
+++ b/myproject/pages/Post-an-article.html
@@ -18,17 +18,19 @@
 
       <!-- 顯示帳號和頭像 -->
       <div class="user-info">
-        <img src="avatar.png" alt="頭像" class="avatar" />
+        <img src="../images/flowershop/icon-ig.svg" alt="頭像" class="avatar" />
         <span id="userName">您的帳號名稱</span>
       </div>
 
       <!-- 選擇分類看板 -->
       <label for="boardSelect">選擇分類看板：</label>
       <select id="boardSelect">
-        <option value="general">綜合</option>
-        <option value="news">新聞</option>
-        <option value="entertainment">娛樂</option>
-        <option value="tech">科技</option>
+        <option value="urbantale">都市傳說</option>
+        <option value="adventure">廢墟探險</option>
+        <option value="Curiosity">恐怖獵奇</option>
+        <option value="Portfolio">恐怖作品</option>
+        <option value="Exorcise">驅邪收驚</option>
+        <option value="collection">我的收藏</option>
       </select>
 
       <!-- 文章標題 -->
@@ -39,8 +41,8 @@
 
       <!-- 插入圖片和影片按鈕 -->
       <div class="media-buttons">
-        <button id="insertImage">插入圖片</button>
-        <button id="insertVideo">插入影片</button>
+        <button id="insertImage">圖片</button>
+        <button id="insertVideo">影片</button>
       </div>
 
       <!-- 送出和取消按鈕 -->
