--- a/myproject/pages/cycle.html
+++ b/myproject/pages/cycle.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>輪播圖範例</title>
+        <!-- 自訂的CSS權重要最大，一定要放在最下面 -->
     <style>
         /* 第一款 */
 .box img {
@@ -133,7 +134,8 @@
     <!-- 2. 載入輪播的主程式套件 -->
     <script src="../jQuery/js/jquery.cycle.all.js"></script> <!-- 輪播圖 -->
     <script src="../jQuery/js/jquery.jcarousellite.min.js"></script> <!-- 膠捲輪播圖 -->
-    <script src="../jQuery/js/jquery.textslider.min.js"></script> <!-- 文字跑馬燈 -->
+    <script src="../jQuery/js/jquery.textslider.min.js"></script> 
+    <!-- 文字跑馬燈 -->
 
     <!-- 3. 撰寫自己的jQuery:驅動這些圖片可以輪播 -->
     <script>
