--- a/Bootstrap/Zara Web/woman.html
+++ b/Bootstrap/Zara Web/woman.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-     <!-- bootstrap 有定義 reset 不可重複定義 -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <title>{ProductName}-女裝-ZARA</title>
+    <!-- bootstrap 有定義 reset 不可重複定義 -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- 用本機開 icon CSS 檔案/webfonts -->
     <link rel="stylesheet" href="./webfonts/all.min.css">
     <!-- 自訂的 Css 放這裡 -->
@@ -32,7 +32,7 @@
                     <!-- nav-item-單個按鈕 -->
                     <li class="nav-item">
                         <!-- active 當前頁面指示樣式 -->
-                        <a class="nav-link active" aria-current="page" href="#">首頁</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">首頁</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">最新商品</a>
@@ -80,17 +80,156 @@
         <section id="woman">
             <!-- 區塊標題 -->
             <header class="heading">
-                <h3>商品列表</h3>
+                <h3>女裝全部商品</h3>
             </header>
+            <div class="row">
+                <!--<div class="col-6 col-lg-4 col-xxl-3">
+                     產品圖 
+                    <a href="detail.hmtl">
+                        <img src="./images/product/default-img1.jpg" alt="產品1">
+                    </a>
+                    產品標題 
+                     <div class="content">
+                        <h3>ProductName1</h3>
+                        <p>NT.9,999</p>
+                </div>-->
+
+                <!--div.col-6 col-lg-4 col-xxl-3>(a[href="detail.hmtl"]>img[src="./images/product/default-img$.jpg" alt="產品$"])+
+                div.content>h3{ProductName$}+p{NT9,999}-->
+
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/default-img1.jpg" alt="產品1" class="hover-img"
+                data-hover="./images/product/hover-img1.jpg"
+                data-default="./images/product/default-img1.jpg"
+                ></a>
+                    <div class="content">
+                        <h3>ProductName1</h3>
+                        <p><del>NT9,999</del>NT8,888</p>
+                    </div>
+                </div>
+
+                <!-- div.col-6.col-lg-4.col-xxl-3*15>(a[href="details.hmtl"]>img.hover-img[src="./images/product/hover-img1.jpg" alt="產品1" data-hover="./images/product/hover-img1.jpg"
+                data-default="./images/product/default-img1.jpg"])+div.content>h3{ProductName$}+p{NT.8,888}>del{NT.8,888} -->
+
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/default-img1.jpg" alt="" class="hover-img" ,data-default="./images/product/hover-img1.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName1</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img2.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img2.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName2</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img3.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img3.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName3</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img4.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img4.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName4</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img5.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img5.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName5</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img6.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img6.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName6</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img7.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img7.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName7</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img8.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img8.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName8</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img9.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img9.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName9</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img10.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img10.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName10</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img11.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img11.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName11</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img12.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img12.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName12</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img13.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img13.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName13</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img14.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img14.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName14</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+                <div class="col-6 col-lg-4 col-xxl-3">
+                    <a href="details.hmtl"><img src="./images/product/hover-img15.jpg" alt="" class="hover-img" ,data-default="./images/product/default-img15.jpg"></a>
+                    <div class="content">
+                        <h3>ProductName15</h3>
+                        <p>NT.8,888<del>NT.8,888</del></p>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
     <!-- 頁尾區 -->
     <footer>copyright &copy; 2024 ZARA.</footer>
-      <!--bootstrap js cdn -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-  crossorigin="anonymous"></script>
+    <!--bootstrap js cdn -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+    <!-- jquery CDN -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+    <!-- 自訂的js -->
+    <script src = "./js/script.js"></script>
 </body>
 
 </html>
